# rust-bitcoincore-rpc

client/: Cargo.toml
client/src/: lib.rs
integration_test/: Cargo.toml
