[package]
name = "jitash-bitcoincore-rpc"
version = "0.17.0"
authors = [
    "Jitash <jitash@foxmail.com>"
]
license = "CC0-1.0"
homepage = "https://github.com/jitash/rust-bitcoincore-rpc/"
repository = "https://github.com/jitash/rust-bitcoincore-rpc/"
description = "RPC client library for the Bitcoin Core JSON-RPC API."
keywords = ["crypto", "bitcoin", "bitcoin-core", "rpc"]
readme = "README.md"
edition = "2018"

[lib]
name = "bitcoincore_rpc"
path = "src/lib.rs"

[dependencies]
bitcoincore-rpc-json = { version = "0.17.0", path = "../json" }

log = "0.4.5"
jitash-jsonrpc = "0.15.0"
# Used for deserialization of JSON.
serde = "1"
serde_json = "1"
bitcoin-private = "0.1.0"
